# diesel_demo

./: Cargo.toml  diesel.toml
migrations/2024-12-08-053321_create_posts/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/gui/: mod.rs
