[package]
name = "diesel_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24"
tokio = { version = "1", features = ["full"] }
actix-web = "4.0"
diesel = { version = "2.2.4", features = ["mysql", "chrono"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
